# sceneos

./: .gitignore  CONTEXT.md  DEVELOPMENT.md  README.md  STATE.md  dev.sh
backend/: .env.example  .env.mock  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
backend_py/: .env.example  .env.mock  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  scratch_lighthouse_rebake.py  scratch_lighthouse_remaining.py  scratch_one_beat.py  scratch_veo31_probe.py  smoke_pipeline.py
backend_py/sceneos_py/: __init__.py  agent.py  agent_graph.py  anthropic_client.py  app.py  audio.py  beat_templates.py  cached.py  cloudinary.py  config.py  continuity.py  db.py  decompose.py  demo_prompts.py  editor.py  fal.py  genai_client.py  higgsfield.py  higgsfield_soul.py  jobs.py  kling.py  mock.py  motion_presets.py  movie_plan.py  narration.py  orchestrator.py  provider.py  replicate.py  retry.py  session.py  sufficiency.py  vertex_imagen.py  vertex_lyria.py  vertex_veo.py
backend_py/sceneos_py/agent/: __init__.py  _constants.py  anthropic.py  context.py  gemini.py  messages.py  normalizer.py  prompt.py  repair.py  stub.py  tools.py
backend_py/tests/: __init__.py  fe_flow_test.py  fixtures.py  real_smoke.py  smoke_compare.py  test_agent_eval.py  test_api_contract.py  test_audio_and_stitch.py  test_cached_demo_and_editor.py  test_continuity.py  test_keyframes_and_movie_plan.py  test_reliability.py  test_resilience.py  test_session.py
docs/: AGENT_FLOW.md  BACKEND_ARCHITECTURE.md  CANVAS_3D.md  CANVAS_PLANETARY_OVERHAUL.md  DEMO_PHILOSOPHY.md  (+25 more)
(+148 files in other folders)
