[project]
name = "sceneos-backend-py"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.74.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "langgraph>=1.0.0",
  "pydantic>=2.10.0",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
